# ingenium

./: .claudeignore  .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  railway.json
.claude/agents/: ai-systems-engineer.md  api-architect.md  auth-guardian.md  command-center.md  db-grandmaster.md  devops-commander.md  enterprise-product-owner.md  performance-hunter.md  qa-war-machine.md  root-cause-forensics.md  titan-core.md  titan-ui.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_auth_fields.py  0002_otp_fields.py  0003_pagination_indexes.py  0004_security_tables.py  0005_procurement.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  auth.py  clients.py  documents.py  fx.py  health.py  members.py  organizations.py  products.py  projects.py  purchase_orders.py  quotes.py  reports.py  router.py  stock.py  suppliers.py
backend/app/core/: exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  audit.py  client.py  document.py  fx.py  organization.py  procurement.py  product.py  project.py  quote.py  security.py  stock.py  supplier.py  tax.py  user.py
backend/app/schemas/: client.py  common.py  llm.py  stock.py  supplier.py
backend/app/services/: audit.py  email_assistant.py  inventory.py  scheduler.py  security_alert.py
backend/app/services/email/: smtp.py
backend/app/services/fx/: rates.py
backend/app/services/ingestion/: confidence.py  learner.py  llm_extractor.py  normalizer.py  pipeline.py
backend/app/services/ingestion/parsers/: base.py  csv.py  docx.py  image.py  pdf.py  xlsx.py
backend/app/services/llm/: claude.py  openai_provider.py  provider.py
backend/app/services/llm/prompts/: extraction.py  matching.py  quote_agent.py
backend/app/services/matching/: catalog_matcher.py  specs_validator.py
backend/app/services/pricing/: engine.py  rules.py
backend/app/services/quote/: pdf_generator.py  template_fill.py
backend/app/services/reports/: pdf.py
backend/app/services/tax/: engine.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: document_processing.py  llm_tasks.py  notifications.py
backend/scripts/: init_db.py  start.sh
backend/tests/: conftest.py
backend/tests/integration/: test_bulk_savepoint.py  test_dashboard.py  test_db_constraints.py  test_doc_review.py  test_pdf_parsing.py  test_price_history.py  test_procurement.py  test_product_import_file.py  test_reports.py  test_scheduler.py  test_semantic_matching.py  test_stock_import_file.py  test_stock_ops.py
backend/tests/unit/: test_auth.py  test_extraction_cleanup.py  test_security.py
db/: schema.sql  seed.sql
docs/: SPEC.md
frontend/: index.html  vercel.json
infra/docker/postgres/: init.sql
tests-ui/: package-lock.json  package.json  smoke.mjs
