[project]
name = "aqp-backend"
version = "0.1.0"
description = "AI Quote & Procurement Platform — Backend"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",

    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Async jobs
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",

    # Object storage
    "boto3>=1.35.0",

    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "instructor>=1.7.0",
    "tiktoken>=0.8.0",

    # Document parsing
    "pdfplumber>=0.11.0",
    "camelot-py[base]>=0.11.0",
    "openpyxl>=3.1.5",
    "python-docx>=1.1.2",
    "pandas>=2.2.3",
    "chardet>=5.2.0",
    "Pillow>=11.0.0",

    # OCR (cloud APIs)
    "azure-ai-documentintelligence>=1.0.0",

    # HTTP & utilities
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",

    # Logging & observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "sentry-sdk[fastapi]>=2.18.0",

    # PDF generation
    "fpdf2>=2.8.0",       # pure-Python PDF (bez sistemskih ovisnosti, primarni generator)
    "weasyprint>=63.0",   # HTML→PDF (zahtijeva pango/cairo; opcionalno)
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-jose",
    "types-passlib",
    "ipython>=8.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -----------------------------------------------------------------------------
# Ruff (linter + formatter)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg — FastAPI Depends() idiom (codebase-wide)
    "E712",  # == True/False — ispravan SQLAlchemy ORM filter (is True ne radi u SQL-u)
    "RUF001",  # ambiguous unicode u stringu — hrvatski tekst i simboli (·, →) su namjerni
    "RUF002",  # isto, u docstringu
    "RUF003",  # isto, u komentaru
]

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/"]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (requires services)",
    "slow: Slow tests",
]
